<resources>
    <string name="app_name">Smart Order</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dishes_tablayout_dishes">Dishes</string>
    <string name="dishes_tablayout_mainfood">Main Food</string>
    <string name="dishes_tablayout_drink">Drink</string>
    <string name="dishes_tablayout_dessert">Dessert</string>
    <string name="button_back">BACK</string>
    <string name="user_id">User ID</string>
    <string name="hint_user_id">Shawn1993</string>
    <string name="password">Password</string>
    <string name="is_manager">Sign up for a new organization</string>
    <string name="company_code">Group Code</string>
    <string name="hint_company_code">0000</string>
    <string name="sign_up_email">Email</string>
    <string name="hint_sign_up_email">plateful@gmail.com</string>
    <string name="button_register">SIGN UP</string>
    <string name="button_login">LOGIN</string>
    <string name="button_drawer_header_logout">LOGOUT</string>
    <string name="button_new_member">ADD NEW</string>
    <string name="textView_login_head">WELCOME COMING!</string>
    <string name="textView_login_introduce">It is a convenient app can be used to deal with basic order tasks in restaurants.</string>
    <string name="textView_new_here">New here?</string>
    <string name="textView_register">Register!</string>
    <string name="as_manager">As a manager</string>
    <string name="drawer_home">HOME</string>
    <string name="drawer_menu">MENU</string>
    <string name="drawer_setting">TABLE SETTING</string>
    <string name="drawer_profile">PERSONNEL</string>
    <string name="drawer_history">HISTORY</string>
    <string name="drawer_profile_image">PROFILE IMAGE</string>
    <string name="drawer_other">OTHER</string>
    <string name="button_add">ADD</string>
    <string name="button_refresh">REFRESH</string>
    <string name="button_home">HOME</string>
    <string name="button_cash_up">CASH UP</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_dishes_down">DONE</string>
    <string name="drawer_header_website">shawn.com</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="nav_app_bar_close_drawer_description">Close navigation drawer</string>
    <string name="add_menu_image_description">Dish picture</string>
    <string name="add_menu_action_album_description">Get a photo from album</string>
    <string name="add_menu_action_camera_description">Take a photo</string>
    <string name="edit_text_dish_name">DISH NAME</string>
    <string name="edit_text_dish_code">DISH CODE</string>
    <string name="auto_complete_text_category">CATEGORY</string>
    <string name="auto_complete_text_number_of_tables">NUMBER OF TABLES</string>
    <string name="helper_text_required">required</string>
    <string name="helper_text_add_menu_dish_code">A short name for a dish, ex:D01. Not required.</string>
    <string name="edit_text_add_menu_price">PRICE</string>
    <string name="button_add_to_menu">ADD TO MENU</string>
    <string name="button_update">UPDATE</string>
    <string name="button_delete">DELETE</string>
    <string name="textView_sign_up_owner">This account will be created as a owner for a new group. If you want to add your members, please do not use this page. You can add them by using PERSONNEL selection in app menu after you login. </string>
    <string name="imageView_menu_dish_image_description">Dish image showed in menu</string>
    <string name="imageView_menu_edit_image_description">Edit image showed in menu</string>
    <string name="imageView_menu_table_image_description">Edit image showed in table</string>
    <string name="textView_tables_start_time_description">Start:</string>
    <string name="textView_tables_end_time_description">End:</string>
    <string name="textView_tables_price_description">Total:</string>
    <string name="imageButton_dishes_subtract_description">Subtract dish number</string>
    <string name="imageButton_dishes_add_description">Add dish number</string>
</resources>
