<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/textView_login_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textView_login_head"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_login_introduce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/textView_login_introduce" />

    <TextView
        android:id="@+id/textView_login_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/editText_login_user_id"
        android:text="@string/user_id" />

    <EditText
        android:id="@+id/editText_login_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeActionLabel="@string/button_back"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/editText_login_password"
        android:text="@string/password" />

    <EditText
        android:id="@+id/editText_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Switch
        android:id="@+id/switch_login_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/as_manager" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_account_circle_black_24dp"
            android:text="@string/button_login" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_new_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/textView_new_here" />

    <TextView
        android:id="@+id/textView_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:labelFor="@id/button_login_register"
        android:text="@string/textView_register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_add_black_24dp"
            android:text="@string/button_register" />
    </LinearLayout>
</LinearLayout>