<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fragment_drawer_tables"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/fragment_drawer_menu"
            android:icon="@drawable/ic_local_dining_black_24dp"
            android:title="@string/drawer_menu" />
        <item
            android:id="@+id/fragment_drawer_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/drawer_profile" />
        <!--        <item-->
        <!--            android:id="@+id/nav_slideshow"-->
        <!--            android:icon="@drawable/ic_menu_slideshow"-->
        <!--            android:title="@string/menu_slideshow" />-->
    </group>
    <item android:title="@string/drawer_other">
        <menu>
            <item
                android:id="@+id/fragment_drawer_setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/drawer_setting" />
            <!--            <item-->
            <!--                android:id="@+id/nav_privacy_policy"-->
            <!--                android:title="@string/privacy_policy" />-->
        </menu>
    </item>
</menu>