<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.main.addmenu.FragmentAddMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_dish_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/add_menu_image_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/button_fetch_from_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    android:contentDescription="@string/add_menu_action_camera_description"
                    android:src="@drawable/ic_photo_camera_black_24dp" />

                <ImageButton
                    android:id="@+id/button_take_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add_menu_action_album_description"
                    android:src="@drawable/ic_photo_black_24dp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/edit_text_dish_name"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_text_required"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_add_menu_dish_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/auto_complete_text_category"
            app:helperText="@string/helper_text_required"
            app:helperTextEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView_add_menu_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/edit_text_add_menu_price"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_text_required"
            app:helperTextEnabled="true"
            app:prefixText="$">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_add_menu_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button_add_to_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_add_to_menu" />

            <!--        <Button-->
            <!--            android:id="@+id/textButton"-->
            <!--            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"-->
            <!--            android:layout_width="100dp"-->
            <!--            android:layout_height="100dp"-->
            <!--            android:text="@string/button_add_to_menu" />-->
        </LinearLayout>
    </LinearLayout>
</ScrollView>