<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:layout_centerVertical="true"
    android:layout_gravity="center_vertical"
    android:layout_marginHorizontal="16dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView_table_id"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight=".30"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".30"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout_table_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_tables_start_time_description" />

            <TextView
                android:id="@+id/textView_table_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--            <TextView-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="@string/textView_tables_end_time_description" />-->

            <!--            <TextView-->
            <!--                android:id="@+id/textView_table_end_time"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content" />-->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_table_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/textView_tables_price_description" />

            <TextView
                android:id="@+id/textView_table_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_table_status"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView_table_edit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/imageView_menu_table_image_description"
        android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

</LinearLayout>